[package]
name = "resonator_builder"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gp_resonator = { path = "../gp_resonator" }
bode_plot = { path = "../bode_plot" }
wav_util = { path = "../wav_util" }
statrs = "0.16.0"
levenberg-marquardt = "0.13.0"
nalgebra = "0.32.1"
find_peaks = "0.1.5"
rustfft = "6.1.0"
rand = "0.8.5"
num-complex = "0.4.6"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.107"
auto_regressive = { version = "0.1.0", features = ["poly_decomp"] }
